# ulrikke

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
agent/: __init__.py  llm_catalog.py  models.py  prompt_renderer.py
agent/prompts/: general_prompt.md.j2  japanese_translation.md.j2  prompt_interpreter.md.j2
clients/: __init__.py  client_types.py  constants.py  lang_smith.py  open_router.py
clients/datasets/: __init__.py  prompt_interpreter_dataset.py  typings.py
config/: __init__.py  constants.py  settings.py
services/: intent_router.py
