[project]
name = "ulrikke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "instructor>=1.14.4",
    "jinja2>=3.1.0",
    "langchain-core>=1.2.7",
    "langsmith>=0.6.4",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
]

[tool.pyright]
extraPaths = ["."]

